# neovim-haskell-syntax

./: .ghc.environment.x86_64-linux-8.6.3  .gitignore  README.md  cabal.project  neovim-haskell-syntax.cabal  nvim.hs
.stack-work/install/x86_64-linux/lts-12.26/8.4.4/flag-cache/: executable-path-0.0.3.1-HAUXy7yynGAqn9mH431ik  ghc-paths-0.1.0.9-BTJEJFO7ixU1hUjA8BfQ4h  io-storage-0.3-JSTM5Jbimc33ffGojDwBxE  messagepack-0.5.4-JnZ9tUg4hCPBAmanrYAsTw  parser-combinators-1.0.0-FkDIkMqlFRy3ywBA26Y9ci  prettyprinter-1.2.1-IIS5PzLn6frEDfvRrnOWaa  resourcet-1.2.2-Bd2v0h6txFCISSOVnhkj6l  unliftio-0.2.9.0-J3cxrZA03g1LCCLswUrwvV  unordered-containers-0.2.9.0-FASzERpyOH22icMts29z6L
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.4.3/: package.cache
lib/Neovim/Example/: Plugin.hs
lib/Neovim/Example/Plugin/: Fibonacci.hs  Random.hs
src/Neovim/: Plugin.hs
src/Neovim/API/: THT.hs  Text.hs
src/Neovim/Plugin/: Syntax.hs
