name:                neovim-haskell-syntax
version:             0.1.0.0
synopsis:            Haskell Neovim plugins
description:         Haskell syntax highlighting in neovim using haskell
-- Take a license that you like. Only relevant if you want to make your config
-- used by other people.
license:             BSD3
-- license-file:        LICENSE
author:              Zachary Churchill
maintainer:          zacharyachurchill@gmail.com
copyright:           2019 Zachary Churchill
category:            Neovim
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

executable neovim-haskell-syntax
  main-is:             nvim.hs
  hs-source-dirs:      ., src
  ghc-options:         -O2
  other-modules:       Neovim.Plugin
                     , Neovim.Plugin.Syntax
                     , Neovim.API.Text
                     , Neovim.API.THT
  build-depends:       base >= 4.7 && < 5
                     , nvim-hs >= 1 && < 2
                     , ghc-syntax-highlighter
                     -- API
                     , text
                     , containers
                     , vector
                     , template-haskell
  default-language:    Haskell2010
